handled nulls & wrong formats, filtered responses, used environment variables

--- a/banktest/src/main/resources/.env
+++ b/banktest/src/main/resources/.env
@@ -1,4 +1,2 @@
-URL="jdbc:mysql://localhost:3306/banktest?useSSL=false"
-USERNAME="root"
-PASS= "5fivoIUX_bank_9"
-
+API_KEYE=CGkHPEOzeayv5nEq44HZdPXV6bjRvK9s
+API_URL=https://api.apilayer.com/currency_data
