--- a/banktest/src/main/resources/application.properties
+++ b/banktest/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 
-spring.datasource.url=jdbc:mysql://localhost:3306/banktest?useSSL=false&allowPublicKeyRetrieval=true
-spring.datasource.username= root
-spring.datasource.password= 5fivoIUX_bank_9
+spring.datasource.url=${URL}
+spring.datasource.username= ${USERNAME}
+spring.datasource.password= ${PASS}
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl—auto=update
 spring.jpa.show-sql=true
+currency.api.baseUrl=${env.API_URL}
+currency.api.key=${env.API_KEYE}
