--- a/banktest/pom.xml
+++ b/banktest/pom.xml
@@ -67,8 +67,14 @@
 			<version>2.2.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>test</scope>
+		</dependency>
 
-	</dependencies>
+
+</dependencies>
 
 	<build>
 		<plugins>
