--- a/banktest/src/main/resources/application.properties
+++ b/banktest/src/main/resources/application.properties
@@ -1,9 +1,8 @@
-
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=${URL}
 spring.datasource.username= ${USERNAME}
 spring.datasource.password= ${PASS}
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl—auto=update
 spring.jpa.show-sql=true
 currency.api.baseUrl=${env.API_URL}
 currency.api.key=${env.API_KEYE}
